peac_dev/force-app/main/default/objects/Standard_Mapping_Auto_Lead_Conversion__c/Standard_Mapping_Auto_Lead_Conversion__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Standard Mapping Auto Lead Conversion</label>
</CustomObject>