peac_dev/force-app/main/default/objects/Standard_Mapping_Auto_Lead_Conversion__c/fields/Input_Field__c.field-meta.xml
<CustomField>
    <fullName>Input_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Input Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>