peac_dev/force-app/main/default/objects/Standard_Mapping_Auto_Lead_Conversion__c/fields/Output_Object__c.field-meta.xml
<CustomField>
    <fullName>Output_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Output Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>